setting up microblog

--- a/README
+++ b/README
@@ -1,1 +1,27 @@
 Work in progress
+
+
+### Set up development Environment (Ubuntu)
+
+1. Install following packages :
+python python-django python-couchdbkit couchdb git
+
+1. bis 
+If needed install simplejson
+
+2. Create a couchdb database called newebe via Futon 
+(http://localhost:5984/_utils).
+
+3. Retrieve newebe project :
+git clone git@github.com:gelnior/newebe.git
+
+4. Change following constants in settings.py :
+MEDIA_ROOT (path to your media directory).
+TEMPLATE_DIRS (path to your template directory).
+
+5. In newebe run :
+python manage.py runserver
+
+6. In your browser, connect to http://localhost:8000/ and check if everything
+is fine.
+
