add several corrections on debian files

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-newebe (0.6.0) UNRELEASED; urgency=low
+newebe (0.6.0-1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
- -- gelnior <gelnior@sommerless>  Mon, 29 Oct 2012 00:37:51 +0100
+ -- Frank Rousseau <gelnior@free.fr>  Mon, 29 Oct 2012 00:37:51 +0100
