debian: remvoe no sense closed issue number from changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,6 @@ newebe (0.7.0-1) unstable; urgency=low
 
 newebe (0.6.0-1) unstable; urgency=low
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. 
 
  -- Frank Rousseau <gelnior@free.fr>  Mon, 29 Oct 2012 00:37:51 +0100
